dctParser.py
# Generated from dct.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class dctParser ( Parser ):

    grammarFileName = "dct.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'/'", "':'", "'\"'", "'&'", "'{'", "'}'", 
                     "'()'", "'|'", "','", "'_'", "'#'", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "COLON", "AP", "AND", "BO", 
                      "BC", "BRACKET", "OR", "COMA", "UNDERSCORE", "HASH", 
                      "SIGNEDBY", "STRING", "WS", "COMMENT" ]

    RULE_schema = 0
    RULE_definition = 1
    RULE_expression = 2
    RULE_name = 3
    RULE_component = 4
    RULE_identifier = 5
    RULE_signing_chain = 6
    RULE_literal = 7
    RULE_constraints = 8
    RULE_constraint = 9
    RULE_constraint_body = 10
    RULE_function = 11
    RULE_certificates = 12
    RULE_ustring = 13
    RULE_hstring = 14
    RULE_slash = 15

    ruleNames =  [ "schema", "definition", "expression", "name", "component", 
                   "identifier", "signing_chain", "literal", "constraints", 
                   "constraint", "constraint_body", "function", "certificates", 
                   "ustring", "hstring", "slash" ]

    EOF = Token.EOF
    T__0=1
    COLON=2
    AP=3
    AND=4
    BO=5
    BC=6
    BRACKET=7
    OR=8
    COMA=9
    UNDERSCORE=10
    HASH=11
    SIGNEDBY=12
    STRING=13
    WS=14
    COMMENT=15

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SchemaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dctParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(dctParser.DefinitionContext,i)


        def getRuleIndex(self):
            return dctParser.RULE_schema

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSchema" ):
                listener.enterSchema(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSchema" ):
                listener.exitSchema(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSchema" ):
                return visitor.visitSchema(self)
            else:
                return visitor.visitChildren(self)




    def schema(self):

        localctx = dctParser.SchemaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_schema)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 32
                self.definition()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << dctParser.UNDERSCORE) | (1 << dctParser.HASH) | (1 << dctParser.STRING))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(dctParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(dctParser.COLON, 0)

        def expression(self):
            return self.getTypedRuleContext(dctParser.ExpressionContext,0)


        def constraints(self):
            return self.getTypedRuleContext(dctParser.ConstraintsContext,0)


        def certificates(self):
            return self.getTypedRuleContext(dctParser.CertificatesContext,0)


        def getRuleIndex(self):
            return dctParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = dctParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.identifier()
            self.state = 38
            self.match(dctParser.COLON)
            self.state = 39
            self.expression()
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==dctParser.AND:
                self.state = 40
                self.constraints()


            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==dctParser.SIGNEDBY:
                self.state = 43
                self.certificates()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(dctParser.NameContext,0)


        def identifier(self):
            return self.getTypedRuleContext(dctParser.IdentifierContext,0)


        def literal(self):
            return self.getTypedRuleContext(dctParser.LiteralContext,0)


        def getRuleIndex(self):
            return dctParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = dctParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.name()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dctParser.ComponentContext)
            else:
                return self.getTypedRuleContext(dctParser.ComponentContext,i)


        def slash(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dctParser.SlashContext)
            else:
                return self.getTypedRuleContext(dctParser.SlashContext,i)


        def getRuleIndex(self):
            return dctParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = dctParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 51
                    self.component()
                    self.state = 52
                    self.slash()

                else:
                    raise NoViableAltException(self)
                self.state = 56 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 58
            self.component()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(dctParser.LiteralContext,0)


        def identifier(self):
            return self.getTypedRuleContext(dctParser.IdentifierContext,0)


        def function(self):
            return self.getTypedRuleContext(dctParser.FunctionContext,0)


        def getRuleIndex(self):
            return dctParser.RULE_component

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent" ):
                listener.enterComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent" ):
                listener.exitComponent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent" ):
                return visitor.visitComponent(self)
            else:
                return visitor.visitChildren(self)




    def component(self):

        localctx = dctParser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_component)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.function()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(dctParser.STRING, 0)

        def ustring(self):
            return self.getTypedRuleContext(dctParser.UstringContext,0)


        def hstring(self):
            return self.getTypedRuleContext(dctParser.HstringContext,0)


        def getRuleIndex(self):
            return dctParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = dctParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_identifier)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dctParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.match(dctParser.STRING)
                pass
            elif token in [dctParser.UNDERSCORE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.ustring()
                pass
            elif token in [dctParser.HASH]:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.hstring()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Signing_chainContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(dctParser.STRING, 0)

        def getRuleIndex(self):
            return dctParser.RULE_signing_chain

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSigning_chain" ):
                listener.enterSigning_chain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSigning_chain" ):
                listener.exitSigning_chain(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSigning_chain" ):
                return visitor.visitSigning_chain(self)
            else:
                return visitor.visitChildren(self)




    def signing_chain(self):

        localctx = dctParser.Signing_chainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_signing_chain)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(dctParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AP(self, i:int=None):
            if i is None:
                return self.getTokens(dctParser.AP)
            else:
                return self.getToken(dctParser.AP, i)

        def STRING(self):
            return self.getToken(dctParser.STRING, 0)

        def getRuleIndex(self):
            return dctParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = dctParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(dctParser.AP)

            self.state = 73
            self.match(dctParser.STRING)

            self.state = 74
            self.match(dctParser.AP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(dctParser.AND, 0)

        def constraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dctParser.ConstraintContext)
            else:
                return self.getTypedRuleContext(dctParser.ConstraintContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(dctParser.OR)
            else:
                return self.getToken(dctParser.OR, i)

        def getRuleIndex(self):
            return dctParser.RULE_constraints

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraints" ):
                listener.enterConstraints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraints" ):
                listener.exitConstraints(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraints" ):
                return visitor.visitConstraints(self)
            else:
                return visitor.visitChildren(self)




    def constraints(self):

        localctx = dctParser.ConstraintsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constraints)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(dctParser.AND)
            self.state = 77
            self.constraint()
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dctParser.OR:
                self.state = 78
                self.match(dctParser.OR)
                self.state = 79
                self.constraint()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BO(self):
            return self.getToken(dctParser.BO, 0)

        def constraint_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dctParser.Constraint_bodyContext)
            else:
                return self.getTypedRuleContext(dctParser.Constraint_bodyContext,i)


        def BC(self):
            return self.getToken(dctParser.BC, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(dctParser.COMA)
            else:
                return self.getToken(dctParser.COMA, i)

        def getRuleIndex(self):
            return dctParser.RULE_constraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraint" ):
                listener.enterConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraint" ):
                listener.exitConstraint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraint" ):
                return visitor.visitConstraint(self)
            else:
                return visitor.visitChildren(self)




    def constraint(self):

        localctx = dctParser.ConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_constraint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(dctParser.BO)
            self.state = 86
            self.constraint_body()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dctParser.COMA:
                self.state = 87
                self.match(dctParser.COMA)
                self.state = 88
                self.constraint_body()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(dctParser.BC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constraint_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(dctParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(dctParser.COLON, 0)

        def literal(self):
            return self.getTypedRuleContext(dctParser.LiteralContext,0)


        def function(self):
            return self.getTypedRuleContext(dctParser.FunctionContext,0)


        def getRuleIndex(self):
            return dctParser.RULE_constraint_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraint_body" ):
                listener.enterConstraint_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraint_body" ):
                listener.exitConstraint_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraint_body" ):
                return visitor.visitConstraint_body(self)
            else:
                return visitor.visitChildren(self)




    def constraint_body(self):

        localctx = dctParser.Constraint_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_constraint_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.identifier()
            self.state = 97
            self.match(dctParser.COLON)
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dctParser.AP]:
                self.state = 98
                self.literal()
                pass
            elif token in [dctParser.STRING]:
                self.state = 99
                self.function()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(dctParser.STRING, 0)

        def BRACKET(self):
            return self.getToken(dctParser.BRACKET, 0)

        def getRuleIndex(self):
            return dctParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = dctParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(dctParser.STRING)
            self.state = 103
            self.match(dctParser.BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CertificatesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SIGNEDBY(self):
            return self.getToken(dctParser.SIGNEDBY, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dctParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(dctParser.IdentifierContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(dctParser.OR)
            else:
                return self.getToken(dctParser.OR, i)

        def getRuleIndex(self):
            return dctParser.RULE_certificates

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCertificates" ):
                listener.enterCertificates(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCertificates" ):
                listener.exitCertificates(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCertificates" ):
                return visitor.visitCertificates(self)
            else:
                return visitor.visitChildren(self)




    def certificates(self):

        localctx = dctParser.CertificatesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_certificates)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(dctParser.SIGNEDBY)
            self.state = 106
            self.identifier()
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dctParser.OR:
                self.state = 107
                self.match(dctParser.OR)
                self.state = 108
                self.identifier()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UstringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UNDERSCORE(self):
            return self.getToken(dctParser.UNDERSCORE, 0)

        def STRING(self):
            return self.getToken(dctParser.STRING, 0)

        def getRuleIndex(self):
            return dctParser.RULE_ustring

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUstring" ):
                listener.enterUstring(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUstring" ):
                listener.exitUstring(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUstring" ):
                return visitor.visitUstring(self)
            else:
                return visitor.visitChildren(self)




    def ustring(self):

        localctx = dctParser.UstringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_ustring)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(dctParser.UNDERSCORE)

            self.state = 115
            self.match(dctParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HstringContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HASH(self):
            return self.getToken(dctParser.HASH, 0)

        def STRING(self):
            return self.getToken(dctParser.STRING, 0)

        def getRuleIndex(self):
            return dctParser.RULE_hstring

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHstring" ):
                listener.enterHstring(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHstring" ):
                listener.exitHstring(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHstring" ):
                return visitor.visitHstring(self)
            else:
                return visitor.visitChildren(self)




    def hstring(self):

        localctx = dctParser.HstringContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_hstring)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(dctParser.HASH)

            self.state = 118
            self.match(dctParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SlashContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return dctParser.RULE_slash

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSlash" ):
                listener.enterSlash(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSlash" ):
                listener.exitSlash(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSlash" ):
                return visitor.visitSlash(self)
            else:
                return visitor.visitChildren(self)




    def slash(self):

        localctx = dctParser.SlashContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_slash)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(dctParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





